2010-03-04  Martin Jambor  <mjambor@suse.cz>

PR tree-optimization/43164
	PR tree-optimization/43191
	* tree-sra.c (type_consists_of_records_p): Reject records with
	zero-size bit-fields at the end.

	* testsuite/gcc.c-torture/compile/pr43164.c: New test.
	* testsuite/gcc.c-torture/compile/pr43191.c: Likewise.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157232 138bc75d-0d04-0410-961f-82ee72b054a4